# Scene-text-recognition

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  canny_text.sln  canny_text.vcxproj  canny_text.vcxproj.filters  my_notebook.ipynb  utils.ipynb
.ipynb_checkpoints/: my_notebook-checkpoint.ipynb
dictionary/: dictionary1.txt  dictionary2.txt  dictionary3.txt  self_define_word.txt  tp_table.txt
er_classifier/: adb1.classifier  adb2.classifier  cascade1.classifier  cascade1_20170213.classifier  cascade2.classifier  cascade2_20170213.classifier  lbp.classifier  log.txt  opencv_classifier.xml  strong.classifier  weak.classifier  weak_another.classifier  weak_svm.out
er_classifier/20170411/: strong.classifier  weak.classifier
inc/: ER.h  OCR.h  SpellingCorrector.h  adaboost.h  getopt.h  mylib.h  svm.h  utils.h
ocr_classifier/: OCR.data  OCR.model  flann_feature.yml  index.fln  out  predict_result.txt  svm.data  svm.model
ocr_classifier/Cambria/Normal/: lower.txt  number.txt  symbol.txt  upper.txt
ocr_classifier/Coda/Bold/: lower.txt  number.txt  symbol.txt  upper.txt
ocr_classifier/Coda/Bold_and_Italic/: lower.txt  number.txt  symbol.txt  (+1 more)
others/: graph.txt
others/deteval/: det.xml  det_2_10.xml  det_2_100.xml  det_2_110.xml  det_2_120.xml  det_2_130.xml  det_2_140.xml  det_2_150.xml  det_2_160.xml  det_2_170.xml  det_2_180.xml  det_2_190.xml  det_2_20.xml  det_2_200.xml  det_2_210.xml  det_2_220.xml  det_2_230.xml  det_2_240.xml  det_2_250.xml  det_2_30.xml  det_2_40.xml  det_2_50.xml  det_2_60.xml  det_2_70.xml  det_2_80.xml  det_2_90.xml  det_3_100.xml  det_3_110.xml  det_3_120.xml  det_3_130.xml  det_3_140.xml  det_3_150.xml  det_3_160.xml  det_3_170.xml  det_3_180.xml  det_3_190.xml  det_3_20.xml  det_3_200.xml  det_3_210.xml  det_3_220.xml  (+128 more)
res/: download_pic.py  rename.py  url_file.txt
res/ICDAR2015_test_GT/: gt_img_1.txt  gt_img_100.txt  gt_img_102.txt  gt_img_103.txt  gt_img_105.txt  gt_img_106.txt  gt_img_107.txt  gt_img_109.txt  gt_img_11.txt  gt_img_110.txt  gt_img_111.txt  gt_img_112.txt  gt_img_113.txt  gt_img_115.txt  gt_img_116.txt  gt_img_119.txt  gt_img_12.txt  gt_img_125.txt  gt_img_126.txt  gt_img_13.txt  gt_img_130.txt  gt_img_131.txt  gt_img_137.txt  gt_img_14.txt  gt_img_140.txt  gt_img_141.txt  gt_img_143.txt  gt_img_144.txt  gt_img_145.txt  gt_img_146.txt  gt_img_148.txt  gt_img_149.txt  gt_img_15.txt  gt_img_150.txt  gt_img_151.txt  gt_img_152.txt  gt_img_154.txt  gt_img_155.txt  gt_img_159.txt  gt_img_16.txt  (+99 more)
res/ICDAR2015_test_GT - Copy/: gt_img_10.txt  gt_img_101.txt  gt_img_104.txt  gt_img_108.txt  gt_img_114.txt  gt_img_117.txt  gt_img_118.txt  gt_img_120.txt  gt_img_121.txt  gt_img_122.txt  gt_img_123.txt  gt_img_124.txt  gt_img_127.txt  gt_img_128.txt  gt_img_129.txt  gt_img_132.txt  gt_img_133.txt  gt_img_134.txt  gt_img_135.txt  gt_img_136.txt  gt_img_138.txt  gt_img_139.txt  gt_img_142.txt  gt_img_147.txt  gt_img_152.txt  gt_img_153.txt  gt_img_156.txt  gt_img_157.txt  gt_img_158.txt  gt_img_160.txt  gt_img_161.txt  gt_img_162.txt  gt_img_165.txt  gt_img_167.txt  gt_img_17.txt  gt_img_171.txt  gt_img_175.txt  gt_img_176.txt  gt_img_18.txt  gt_img_180.txt  (+63 more)
res/ICDAR2015_training_GT/: 100_GT.txt  101_GT.txt  102_GT.txt  103_GT.txt  104_GT.txt  105_GT.txt  106_GT.txt  107_GT.txt  108_GT.txt  109_GT.txt  110_GT.txt  111_GT.txt  112_GT.txt  113_GT.txt  114_GT.txt  115_GT.txt  116_GT.txt  117_GT.txt  118_GT.txt  119_GT.txt  120_GT.txt  121_GT.txt  122_GT.txt  123_GT.txt  124_GT.txt  125_GT.txt  126_GT.txt  127_GT.txt  128_GT.txt  129_GT.txt  130_GT.txt  131_GT.txt  132_GT.txt  133_GT.txt  134_GT.txt  135_GT.txt  136_GT.txt  137_GT.txt  138_GT.txt  139_GT.txt  (+189 more)
res/ch3_test/: Video_11_4_1_GT_voc.txt  Video_15_4_1_GT_voc.txt  Video_17_3_1_GT_voc.txt  Video_1_1_2_GT_voc.txt  Video_20_5_1_GT_voc.txt  Video_22_5_1_GT_voc.txt  Video_23_5_2_GT_voc.txt  Video_24_5_2_GT_voc.txt  Video_30_2_3_GT_voc.txt  Video_32_2_3_GT_voc.txt  Video_34_2_3_GT_voc.txt  Video_35_2_3_GT_voc.txt  Video_38_2_3_GT_voc.txt  Video_39_2_3_GT_voc.txt  Video_43_6_4_GT_voc.txt  Video_44_6_4_GT_voc.txt  Video_48_6_4_GT_voc.txt  Video_49_6_4_GT_voc.txt  Video_50_7_4_GT_voc.txt  Video_53_7_4_GT_voc.txt  Video_55_3_2_GT_voc.txt  Video_5_3_2_GT_voc.txt  Video_6_3_2_GT_voc.txt  Video_9_1_1_GT_voc.txt  testsetVocabulary.txt
res/ch3_train/: Video_10_1_1_GT.txt  Video_10_1_1_GT.xml  Video_10_1_1_GT_voc.txt  Video_13_4_1_GT.txt  Video_13_4_1_GT.xml  Video_13_4_1_GT_voc.txt  Video_16_3_2_GT.txt  Video_16_3_2_GT.xml  Video_16_3_2_GT_voc.txt  Video_18_3_1_GT.txt  Video_18_3_1_GT.xml  Video_18_3_1_GT_voc.txt  Video_19_5_1_GT.txt  Video_19_5_1_GT.xml  Video_19_5_1_GT_voc.txt  Video_21_5_1_GT.txt  Video_21_5_1_GT.xml  Video_21_5_1_GT_voc.txt  Video_25_5_2_GT.txt  Video_25_5_2_GT.xml  Video_25_5_2_GT_voc.txt  Video_26_5_2_GT.txt  Video_26_5_2_GT.xml  Video_26_5_2_GT_voc.txt  Video_28_1_1_GT.txt  Video_28_1_1_GT.xml  Video_28_1_1_GT_voc.txt  Video_2_1_2_GT.txt  Video_2_1_2_GT.xml  Video_2_1_2_GT_voc.txt  Video_33_2_3_GT.txt  Video_33_2_3_GT.xml  Video_33_2_3_GT_voc.txt  Video_36_2_3_GT.txt  Video_36_2_3_GT.xml  Video_36_2_3_GT_voc.txt  Video_37_2_3_GT.txt  Video_37_2_3_GT.xml  Video_37_2_3_GT_voc.txt  Video_40_2_3_GT.txt  (+36 more)
res/scripts/: get_ocr_data.py
src/: ER.cpp  OCR.cpp  SpellingCorrector.cpp  adaboost.cpp  main.cpp  mylib.cpp  svm-train.cpp  svm.cpp  utils.cpp
transition_probability/: icdar_word.txt  self_define_word.txt  tp.py  tp.txt
transition_probability/dictionary/: self_define_word.txt
(+427 files in other folders)
